# dolphin-rpi

./: CMakeLists.txt  Readme.md
Data/Sys/GameSettings/: SLS.ini
Source/Core/Common/: Arm64Emitter.cpp  EnumMap.h  FileUtil.cpp  MathUtil.h
Source/Core/Core/: BootManager.cpp  CMakeLists.txt  ConfigManager.cpp  ConfigManager.h  Core.vcxproj  Core.vcxproj.filters  Movie.cpp  NetPlayClient.cpp  NetPlayProto.h  NetPlayServer.cpp
Source/Core/Core/Boot/: Boot.cpp  Boot.h
Source/Core/Core/Config/: MainSettings.cpp  MainSettings.h
Source/Core/Core/ConfigLoaders/: IsSettingSaveable.cpp
Source/Core/DiscIO/: Blob.cpp  Blob.h  CISOBlob.h  CMakeLists.txt  CompressedBlob.h  DiscExtractor.h  DiscIO.vcxproj  DiscIO.vcxproj.filters  DriveBlob.h  FileBlob.h  LaggedFibonacciGenerator.cpp  MultithreadedCompressor.h  ScrubbedBlob.h  TGCBlob.h  Volume.cpp  Volume.h  VolumeDirectory.h  VolumeGC.h  VolumeWad.h  VolumeWii.cpp  VolumeWii.h  WIABlob.cpp  WIABlob.h  WIACompression.cpp  WbfsBlob.h  WiiEncryptionCache.h
Source/Core/DolphinNoGUI/: MainNoGUI.cpp
Source/Core/DolphinWX/: FrameTools.cpp  GameListCtrl.cpp
Source/Core/DolphinWX/Config/: GeneralConfigPane.cpp  GeneralConfigPane.h  PathConfigPane.cpp
Source/Core/VideoBackends/Null/: ShaderCache.cpp  ShaderCache.h  VertexManager.cpp  VertexManager.h
Source/Core/VideoBackends/OGL/: ProgramShaderCache.cpp  ProgramShaderCache.h  VertexManager.cpp  VertexManager.h
Source/Core/VideoCommon/: PixelShaderGen.cpp  PixelShaderGen.h  RenderBase.h  TextureCacheBase.cpp  VertexManagerBase.cpp  VertexManagerBase.h
(+21 files in other folders)
